# caspy

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
src/caspy/: __init__.py  algorithms.py  atomic.py  cache.py  canonical.py  digest.py  hashing.py  store.py  versioned.py
tests/: test_atomic.py  test_cache.py  test_hashing.py  test_store.py  test_versioned.py
